# funda-scraper

./: .gitignore  README.md  pyproject.toml  run_scraper.sh  run_scrapper.sh
funda_scraper/: scrape.py
funda_scraper/config/: config.yaml
