[tool.poetry]
name = "funda-scraper"
version = "1.2.1"
description = "FundaScaper provides the easiest way to perform web scraping on Funda, the Dutch housing website. You can find houses either for sale or for rent, and access historical data from the past few years."
authors = ["Will Chien"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0"
diot = "^0.1.6"
pandas = "^2.2.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.8.0"
tqdm = "^4.67.1"
setuptools = "^61.3.1"
python-dateutil = "^2.8.2"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
